--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <title>Index Static Page</title>
         <meta charset = "UTF-8">
+        <style>
+            h1{
+                text-align = "center";
+            }
+        </style>
     </head>
     <body>
         <h1>Головна сторінка</h1>
