--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset = "UTF-8">
         <style>
             h1{
-                text-align = "center";
+                text-align : "center";
             }
         </style>
     </head>
