--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <title>Index Static Page</title>
         <meta charset = "UTF-8">
         <style>
-            h1{
-                text-align : "center";
+            h1 {
+                text-align : center;
+            }
+            h2 {
+              color: darkred;
             }
         </style>
     </head>
