--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <h2>Мета</h2>
         <h2>Меню</h2>
         <h2>Портфоліо</h2>
+        <a href = "prog/"> Source codes </a>
     </body>
 </html>
